Make const_90_degrees an external variable to stop smart optimizers from converting angle/const_90_degrees to angle*(1/const_90_degrees). Bug 689794.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11949 a1074d23-0009-0410-80fe-cf8c14f379e6